Updates the ToDo texts

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 </div>
 
 <div class="col-xs-5">
-    <p>The ToDo list now initially sorts by assignee name (from unassigned to ascending aplhabetic order) and dealine (soonest first).</p>
-    <p><b>Next feature: Adding assignees from a list of persisted assignees</b></p>
+    <p>The ToDo list now initially sorts by assignee name (from unassigned to ascending aplhabetic order) and dealine (soonest first). You can submit assignees and tasks, then change task status and assignees.</p>
+    <p><b>Next feature: Add comments and history data for tasks.</b></p>
 </div>
 
 <table class="tablesorter">
