--- a/index.html
+++ b/index.html
@@ -54,37 +54,44 @@
 </div>
 </script>                    
 
-<div class="modal fade todo-modal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-sm">
+<div class="modal fade task-modal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-m">
         <div class="modal-content row">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                 <h4 class="modal-title">Add ToDo Item</h4>
             </div>
             <div class="modal-body">
-                <label for="task-name" class="col-xs-6">Task Name:</label>
-                <input id="task-name" data-column="task_name" class="col-xs-5" type="text" />
-                <label for="deadline" class="col-xs-6">Deadline:</label>
-                <input id="deadline" data-column="deadline" class="col-xs-5" type="text" placeholder="e.g. 07-08-2014" />
-                <input type="hidden" name="entity" value="task" />
-                <button class="save btn btn-primary pull-right">Save</button>
+                <span class="col-xs-12">
+                    <label for="task-name" class="col-xs-4">Task Name:</label>
+                    <input id="task-name" data-column="task_name" class="col-xs-8" type="text" />
+                </span>
+                <span clasS="col-xs-12">
+                    <label for="deadline" class="col-xs-4">Deadline:</label>
+                    <input id="deadline" data-column="deadline" class="col-xs-4" type="text" placeholder="e.g. 07-08-2014" />
+                    <input type="hidden" name="entity" value="task" />
+                    <button class="save btn btn-primary pull-right">Save</button>
+                    
+                </span>
             </div>
         </div>
     </div>
 </div>
 
 <div class="modal fade assignee-modal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-sm">
+    <div class="modal-dialog modal-m">
         <div class="modal-content row">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                 <h4 class="modal-title">Add Assignee</h4>
             </div>
             <div class="modal-body">
-                <label for="assignee-name" class="col-xs-6">Name:</label>
-                <input id="assignee-name" data-column="name" class="col-xs-5" type="text" />
-                <input type="hidden" name="entity" value="assignee" />
-                <button class="save btn btn-primary pull-right">Save</button>
+                <span class="col-xs-12">
+                    <label for="assignee-name" class="col-xs-3">Name:</label>
+                    <input id="assignee-name" data-column="name" class="col-xs-6" type="text" />
+                    <input type="hidden" name="entity" value="assignee" />
+                    <button class="save btn btn-primary pull-right">Save</button>
+                </span>
             </div>
         </div>
     </div>
@@ -95,12 +102,12 @@
     <span class="radio-container"><input id="show-done" name="show" checked="checked" type="radio" /> <label for="show-done">Done</label></span>
     <span class="radio-container"><input id="show-unfinished" name="show" type="radio" /> <label for="show-unfinished">Unfinished</label></span>
 </div>
-<div class="col-xs-3">
-    <button class="add-todo btn btn-primary" data-toggle="modal" data-target=".todo-modal">Add ToDo item</button>
+<div class="col-xs-2">
+    <button class="add-todo btn btn-primary" data-toggle="modal" data-target=".task-modal">Add ToDo item</button>
     <button class="add-assignee btn btn-primary" data-toggle="modal" data-target=".assignee-modal">Add Assignee</button>
 </div>
 
-<div class="col-xs-5">
+<div class="col-xs-6">
     <p>The ToDo list now initially sorts by assignee name (from unassigned to ascending aplhabetic order) and dealine (soonest first). You can submit assignees and tasks, then change task status and assignees.</p>
     <p><b>Next feature: Add comments and history data for tasks.</b></p>
 </div>
@@ -226,9 +233,11 @@
                 updateTable(showUnfinished);
                 
                 $('.modal').modal('hide');
-                $('#task-name').val('');
-                $('#assignee').val('');
-                $('#deadline').val('');
+                $('.modal-body').children('input').each(function(){
+                    if ($(this).attr('type') !== 'hidden') {
+                        $(this).val('');
+                    }
+                });
             },
             'json'
         );
